src/tests/snapshots/amber__tests__translating__modulo_int_expression.ab__ksh.snap
---
source: src/tests/translating.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            Log(
                LogFragment {
                    value: Arithmetic(
                        ArithmeticFragment {
                            left: Some(
                                Raw(
                                    RawFragment {
                                        value: "10",
                                        with_condition: false,
                                    },
                                ),
                            ),
                            right: Some(
                                Raw(
                                    RawFragment {
                                        value: "3",
                                        with_condition: false,
                                    },
                                ),
                            ),
                            op: Modulo,
                            quoted: true,
                            with_condition: false,
                        },
                    ),
                },
            ),
            Log(
                LogFragment {
                    value: Arithmetic(
                        ArithmeticFragment {
                            left: Some(
                                Arithmetic(
                                    ArithmeticFragment {
                                        left: Some(
                                            Raw(
                                                RawFragment {
                                                    value: "20",
                                                    with_condition: false,
                                                },
                                            ),
                                        ),
                                        right: Some(
                                            Raw(
                                                RawFragment {
                                                    value: "6",
                                                    with_condition: false,
                                                },
                                            ),
                                        ),
                                        op: Modulo,
                                        quoted: true,
                                        with_condition: false,
                                    },
                                ),
                            ),
                            right: Some(
                                Raw(
                                    RawFragment {
                                        value: "3",
                                        with_condition: false,
                                    },
                                ),
                            ),
                            op: Modulo,
                            quoted: true,
                            with_condition: false,
                        },
                    ),
                },
            ),
            Log(
                LogFragment {
                    value: Arithmetic(
                        ArithmeticFragment {
                            left: Some(
                                Arithmetic(
                                    ArithmeticFragment {
                                        left: Some(
                                            Arithmetic(
                                                ArithmeticFragment {
                                                    left: Some(
                                                        Raw(
                                                            RawFragment {
                                                                value: "100",
                                                                with_condition: false,
                                                            },
                                                        ),
                                                    ),
                                                    right: Some(
                                                        Raw(
                                                            RawFragment {
                                                                value: "7",
                                                                with_condition: false,
                                                            },
                                                        ),
                                                    ),
                                                    op: Modulo,
                                                    quoted: true,
                                                    with_condition: false,
                                                },
                                            ),
                                        ),
                                        right: Some(
                                            Raw(
                                                RawFragment {
                                                    value: "3",
                                                    with_condition: false,
                                                },
                                            ),
                                        ),
                                        op: Modulo,
                                        quoted: true,
                                        with_condition: false,
                                    },
                                ),
                            ),
                            right: Some(
                                Raw(
                                    RawFragment {
                                        value: "2",
                                        with_condition: false,
                                    },
                                ),
                            ),
                            op: Modulo,
                            quoted: true,
                            with_condition: false,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
